--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -29,7 +29,7 @@ footer {
 }
 
 .footer-container li {
-  font-size: 12px;
+  font-size: 14px;
   margin-bottom: 5px;
 }
 
@@ -62,14 +62,14 @@ footer {
 
   .footer-container div {
     flex-basis: 15%;
-    margin-left: 2px;;
+    margin-left: 2px;
   }
 
   .footer-container h2 {
-    font-size: 10px;
+    font-size: 12px;
   }
   
   .footer-container li {
-    font-size: 8px;
+    font-size: 11px;
   }
 }
