--- a/src/pages/blog.css
+++ b/src/pages/blog.css
@@ -82,3 +82,16 @@
       padding:7px 7px;
     }
 }
+
+
+
+/* lazy loading :: */
+
+.lazy-load {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.lazy-load[src] {
+  opacity: 1;
+}
