Optimization Work is done

--- a/src/pages/productgallery.css
+++ b/src/pages/productgallery.css
@@ -1,43 +1,37 @@
 .productpage-container {
   text-align: center;
   width: 90%;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px auto;
 }
 
 .maincategory-title {
-  font-size: 24px;
+  /* font-size: 24px; */
   font-weight: bold;
-  margin-bottom: 20px;
-  padding-top: 30px;
+  margin: 30px 0 10px;
 }
 
-.subdesc {
+.subdes {
   color: grey;
-  text-align: center;
-  margin-bottom: 30px;
-  margin-top: 2px;
+  font-size: 16.5px;
+  margin: 2px 0 30px;
 }
 
 .common-banner {
   width: 100%;
-  padding: 0;
   margin: 0 auto;
   border-radius: 8px;
+  overflow: hidden; /* Ensures the image does not overflow */
 }
 
 .common-banner-image {
   width: 100%;
   height: 350px;
-  border-radius: 8px;
   object-fit: cover;
 }
 
 .category-title {
   font-size: 20px;
-  margin-bottom: 20px;
-  padding-top: 10px;
+  margin: 10px 0 20px;
   color: rgb(13, 12, 12);
   text-align: left;
 }
@@ -46,29 +40,26 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 10px; /* Add gap for consistent spacing */
 }
 
 .product-card {
   width: calc(31% - 10px);
   margin-bottom: 20px;
-  overflow: hidden;
   border-radius: 8px;
   background-color: #fff;
-  text-align: left;
-  text-decoration: none;
   display: flex;
   flex-direction: column;
-  border: solid #ccc 1px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  text-align: left;
 }
 
 .product-card img {
   width: 100%;
   height: 200px;
   object-fit: contain;
-  border-bottom: 1px solid #ccc;
-  border-radius: 8px 8px 0 0;
   background-color: #f9f9f9;
-  margin-bottom: 10px;
 }
 
 .product-details {
@@ -81,10 +72,8 @@
 .product-title {
   font-size: 16px;
   font-weight: bold;
-  margin: 0;
-  padding: 0;
+  margin: 0 0 2px;
   color: #222;
-  margin-bottom: 2px;
 }
 
 .product-description {
@@ -102,22 +91,27 @@
   text-decoration: none;
   border-radius: 5px;
   margin-top: auto; /* Push button to the bottom */
-  align-self: flex-start; /* Align button to the bottom left */
   font-size: 13px;
+  align-self: flex-start; /* Align button to the bottom left */
 }
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
-  .product-card {
-    width: calc(48% - 10px);
-  }
-
   .maincategory-title {
     font-size: 20px;
   }
 
   .category-title {
     font-size: 18px;
+  }
+
+  .product-cards {
+    gap: 10px;
+  }
+
+  .product-card {
+    width: calc(48% - 10px);
+    margin-bottom: 10px;
   }
 
   .product-title {
@@ -130,12 +124,7 @@
 
   .buy-now-button {
     font-size: 12px;
-    padding: 7px 7px;
-  }
-
-  .product-card {
-    width: calc(50% - 10px); /* Increase the width to take up the full container width, minus some margin */
-    margin-bottom: 10px; /* Reduce the margin-bottom to make cards closer */
+    padding: 7px;
   }
 
   .common-banner-image {
