--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -18,7 +18,7 @@ footer {
 }
 
 .footer-container h2 {
-  font-size: 15px;
+  font-size: 1.2rem;
   margin: 0 0 10px;
 }
 
@@ -29,7 +29,7 @@ footer {
 }
 
 .footer-container li {
-  font-size: 14px;
+  font-size: 1rem;
   margin-bottom: 5px;
 }
 
@@ -48,6 +48,10 @@ footer {
 
 .company-info li {
   margin: 0 5px;
+}
+
+.fab{
+  font-size: 1.6rem;
 }
 
 /* Responsive styles */
