--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,17 +1,19 @@
+/* Optimized the css here*/
+/* General container styles */
 .container {
   width: 90%;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px auto 20px;
 }
 
+/* Heading styles */
 .heading {
-  font-size: 24px;
+  /* font-size: 24px; */
   font-weight: bold;
-  margin-bottom: 20px;
+  margin: 0px 0px 20px 0px;
   text-align: left;
 }
 
+/* Category styles */
 .category {
   display: flex;
   flex-wrap: wrap;
@@ -31,35 +33,43 @@
   border-radius: 8px;
 }
 
-.category-item .description {
-  padding-left: 5px;
+.category-item .description,
+.e-description > h2 {
+  padding-left: 0;
+  margin: 0;
+  border: none;
   text-align: left;
+  color: #2c2c2c;
+  font-weight: 600;
+  /* font-weight: bold; */
+}
+
+.category-item .description p{
+  margin: 0;
+  font-size: 1.2rem;
+}
+.category-item > p, .e-category-item > p {
+  margin: .2rem 0 0 0;
   font-size: 16px;
-  text-decoration: none; /* Remove underline */
-  color: #222; /* Inherit text color */
-  display: inline-block; /* Make it an inline-block element */
-  margin: 0; /* Reset margins */
-  padding: 0; /* Reset padding */
-  border: none; /* Reset border */
-  background: none; /* Reset background */
-  font-weight: bold; /* Make the text bold */
-}
+  color: #5f5f5f;
+ 
+} 
 
-.category-item p{
-  color:grey;
-  font-size: 14px;
-  margin-top: 0;
-}
-
+/* Electronics container styles */
 .electronics-container {
   display: flex;
-  padding-bottom: 60px;
+  padding-bottom: 20px;
 }
 
 .left-side,
 .right-side {
   flex: 1;
-  height: auto;
+  padding: 0 5px;
+}
+
+.left-side .e-category-item, .right-side .e-category-item{
+  max-width: 50rem;
+  max-height: 65rem;
 }
 
 .left-side img,
@@ -67,14 +77,6 @@
   width: 100%;
   height: 100%;
   border-radius: 8px;
-}
-
-.left-side {
-  padding-right: 5px;
-}
-
-.right-side {
-  padding-left: 5px;
 }
 
 .right-side .category {
@@ -86,57 +88,38 @@
   margin-bottom: 15px;
 }
 
-.e-description {
-  padding-left: 5px;
-  text-align: left;
-  font-size: 16px;
-  text-decoration: none; /* Remove underline */
-  color: #222; /* Inherit text color */
-  display: inline-block; /* Make it an inline-block element */
-  margin: 0; /* Reset margins */
-  padding: 0; /* Reset padding */
-  border: none; /* Reset border */
-  background: none; /* Reset background */
-  font-weight: bold; /* Make the text bold */
+.description{
+  font-size: 1.2rem;
 }
-
-.e-category-item p{
-  color:grey;
-  font-size: 14px;
-  margin-top: 0;
-}
-
-
 /* Responsive styles */
 @media only screen and (max-width: 768px) {
   .heading {
     font-size: 20px;
   }
+
   .category-item .description,
   .e-description {
     font-size: 13px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 
-  .electronics-container{
+  .electronics-container {
     padding-bottom: 5px;
   }
 
-  .category-item p{
-    font-size:12px;
+  .category-item p,
+  .e-category-item p {
+    font-size: 12px;
     padding-bottom: 20px;
   }
 
-  .category-item img{
-    height:40%;
+  .category-item img {
+    height: 40%;
   }
 
-  .e-category-item p{
-    font-size:12px;
-  }
-
-  .left-side,.right-side{
+  .left-side,
+  .right-side {
     padding-top: 0;
-    padding-bottom:20px;
+    padding-bottom: 20px;
   }
 }
