--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,79 +1,30 @@
 /* header.css */
-.header {
-  background-color: #fff;
-  padding: 10px;
-  border-bottom: 3px solid #333;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.top-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  color: #333;
-  padding: 10px;
-}
-
-form {
-  display: flex;
-  width: 100%;
-}
-
-.unlockdiscounts {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.unlockdiscounts a {
-  text-decoration: none; /* Remove underline */
-  color: inherit; /* Inherit the color from the parent element */
-  font-size: inherit; /* Inherit the font size from the parent element */
-  font-weight: inherit; /* Inherit the font weight from the parent element */
-}
-
-.search-bar {
-  display: flex;
-  align-items: center;
-  width: 50%;
-  border: 2px;
-  border-color: #444;
-}
-
-.search-bar input {
-  display: flex;
-  align-items: center;
-  width: 50%;
-  border: 1px solid #ccc;
-  padding: 5px;
-  border-radius: 5px;
-  margin-right: 5px;
-}
-
-.search-bar button {
-  width: 15%;
-  padding: 5px;
-  background-color: #333;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
+.sign-up {
+  text-decoration: underline;
+  color: white;
+  padding-left: 10px;
   cursor: pointer;
+  user-select: none;
+  background: transparent;
+  outline: none;
+  border: none;
+  font-weight: 500;
 }
-
-.nav-links {
-  display: flex;
-  justify-content: space-between;
-  width: 30%;
+.sign-up-text {
+  font-weight: 400;
 }
-
-.nav-links a,
-.nav-links li {
-  margin-left: 20px;
-  color: #111;
-  text-decoration: none;
-}
-
-.nav-links a:hover {
-  color: #555;
+.logo {
+  width: 125px;
+  height: 89px;
+  object-fit: cover;
 }
 
 /* Added css:: for search bar and live suggestion list */
