--- a/src/components/header.css
+++ b/src/components/header.css
@@ -17,8 +17,11 @@
   outline: none;
   border: none;
   font-weight: 500;
+  font-family: "Satoshi", sans-serif;
+  font-size: inherit;
 }
 .sign-up-text {
+  font-family: "Satoshi", sans-serif;
   font-weight: 400;
 }
 .logo {
@@ -26,7 +29,37 @@
   height: 89px;
   object-fit: cover;
 }
-
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  text-decoration: underline;
+}
+.men-fashion-container {
+  position: relative;
+}
+.red-heading {
+  color: #dc2626;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-weight: 600;
+}
+.form {
+  display: flex;
+  padding: 0 10px;
+  align-items: center;
+  gap: 10px;
+}
+.input-box {
+  background: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 48px;
+  border-radius: 50px;
+  font-size: 16px;
+}
 /* Added css:: for search bar and live suggestion list */
 
 .search-result {
