--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,79 +1,240 @@
 /* footer.css */
-footer {
-  background-color: #fff;
-  padding: 10px;
-  border-top: 3px solid #333;
+
+/* imported required fonts fonts */
+@import url("https://fonts.googleapis.com/css2?family=Notable&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Notable&display=swap");
+.footer {
+  background-color: #f8f9fa;
+  padding: 20px 0;
+  text-align: center;
+  color: #495057;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.footer-container {
+/* css for black banner starts here */
+.footer .black-banner {
+  background-color: #000;
+  color: #fff;
+  /* padding: 5px 0; */
+  text-align: center;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 10px;
+  align-items: center;
+  padding: 36px 64px 36px 64px;
+  margin: 0 5% -10px 5%;
+  border-radius: 20px;
+  /* width: 80%; */
+  z-index: 2; /* z-index added to make it appear on top of white banner */
 }
 
-.footer-container div {
-  flex-basis: 20%;
-  margin-bottom: 20px;
+/* css for black banner >  left section */
+.footer .black-banner .left {
+  font-family: integral-cf, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 45px;
+  text-align: left;
+  padding-right: 50px;
 }
 
-.footer-container h2 {
-  font-size: 1.2rem;
-  margin: 0 0 10px;
+/* css for black banner > right section */
+.footer .black-banner .right {
+  min-width: 250px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.footer-container ul {
-  list-style: none;
+/* css for black banner > right section > span ( for input field with email icon ) */
+.footer .black-banner .right span {
+  width: 100%;
+  border: none;
+  height: 50px;
+  border-radius: 62px;
+  margin: 10px 0;
+  background: white;
+  display: flex;
+  justify-content: start;
+}
+
+/* css for black banner > right section > span > img ( email icon ) */
+.footer .black-banner .right span img {
+  font-size: 30px;
+  margin-left: 10px;
+}
+
+/* css for black banner > right section > span > input ( email input field ) */
+.footer .black-banner .right span input {
+  width: 100%;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  margin: 10px 0;
+  background: transparent;
+  outline: none;
+}
+
+/* css for black banner > right section > button ( subscribe button ) */
+.footer .black-banner .right button {
+  width: 100%;
+  border: none;
+  border-radius: 62px;
+  margin: 10px 0;
+  background: #ffffff;
+  height: 50px;
+  color: black;
+  font-weight: 600;
+}
+
+/* css for white banner starts here */
+/* css for container that wraps all the rest of the elements */
+.footer .container {
+  width: 100%;
+  border-radius: 20px;
+  margin-top: -10px;
+  border-top: 2px solid black;
+  background: #000;
+}
+
+/* css for white banner */
+.footer .white-banner {
+  background-color: #fff;
+  color: #000;
+  /* padding: 10px 0; */
+  text-align: left;
+  display: flex;
+  align-items: start;
+  gap: 20px;
+
+  padding: 36px 5% 36px 5%;
+  z-index: 1;
+  border-radius: 20px;
+  font-family: Inter;
+}
+
+/* css for white banner > left section ( that has social media links */
+.footer .white-banner .left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer .white-banner .left .summary {
+  margin: 0;
+  font-size: 12px;
+}
+
+/* css UNLOCKDISCOUNTS name on white banner */
+.footer .white-banner .branding {
+  font-family: Notable;
+  font-size: 20px;
   padding: 0;
   margin: 0;
-}
-
-.footer-container li {
-  font-size: 1rem;
-  margin-bottom: 5px;
-}
-
-.footer-container a {
-  color: #333;
-  text-decoration: none;
-}
-
-.company-info {
-  flex-basis: 30%;
-}
-
-.company-info ul {
   display: flex;
+  align-items: center;
+  height: 30px;
 }
 
-.company-info li {
-  margin: 0 5px;
+/* css for white banner > left section > small info about unlock discounts */
+.footer .white-banner .sub-heading {
+  font-size: 14px;
+  display: flex;
+  margin: 0;
+
+  align-items: center;
+  margin-top: 3px;
+
+  height: 30px;
 }
 
-.fab{
-  font-size: 1.6rem;
+/* css for white banner > left section > social media icons */
+.footer .white-banner .contact-icons {
+  display: flex;
+  gap: 10px;
 }
 
-/* Responsive styles */
-@media only screen and (max-width: 768px) {
-  footer {
-    padding: 10px;
-  }
-  
-  .footer-container {
-    padding: 2px;
+/* css for white banner > right section ( that has the direct pages link )*/
+.footer .white-banner .right {
+  display: flex;
+  justify-content: space-around;
+  flex: 2.5;
+}
+
+/* css for white banner > right section > col ( columns with pages link ) */
+.footer .white-banner .right .col {
+  font-size: 12px;
+  display: flex;
+  gap: 7px;
+  flex-direction: column;
+}
+
+/* css for white banner > right section > col > nav ( list of pages link ) */
+.footer .white-banner .right .col nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+/* css for white banner > right section > col > nav > li ( individual page link ) */
+.footer .white-banner .right .col li .link {
+  text-decoration: none;
+  color: gray;
+}
+
+/* Tablet view*/
+@media screen and (max-width: 860px) {
+  .footer .black-banner {
+    flex-direction: column;
   }
 
-  .footer-container div {
-    flex-basis: 15%;
-    margin-left: 2px;
+  .footer .black-banner .right {
+    width: 100%;
   }
 
-  .footer-container h2 {
-    font-size: 12px;
+  .footer .white-banner {
+    padding: 36px 5% 36px 5%;
+    flex-direction: column;
   }
-  
-  .footer-container li {
-    font-size: 11px;
+
+  .footer .black-banner .left {
+    font-size: 25px;
+    line-height: 30px;
+    padding-right: 0;
+  }
+
+  .footer .white-banner .right {
+    width: 100%;
+  }
+}
+
+/* Mobile view */
+@media screen and (max-width: 600px) {
+  .footer .black-banner {
+    padding: 36px 28px;
+    margin: 0 5% -20px 5%;
+    z-index: 2;
+  }
+  .footer .black-banner .left {
+    font-size: 18px;
+  }
+  .footer .black-banner .right {
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer .white-banner .right {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
 }
