--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 36px 64px 36px 64px;
+  padding: 20px 64px 20px 64px;
   margin: 0 5% -10px 5%;
   border-radius: 20px;
   /* width: 80%; */
@@ -33,8 +33,8 @@
 /* css for black banner >  left section */
 .footer .black-banner .left {
   font-family: integral-cf, sans-serif;
-  font-weight: 700;
-  font-size: 30px;
+  font-weight: 900;
+  font-size: 40px;
   line-height: 45px;
   text-align: left;
   padding-right: 50px;
@@ -111,7 +111,7 @@
   align-items: start;
   gap: 20px;
 
-  padding: 36px 5% 36px 5%;
+  padding: 64px 5% 64px 5%;
   z-index: 1;
   border-radius: 20px;
   font-family: Inter;
@@ -122,18 +122,18 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .footer .white-banner .left .summary {
   margin: 0;
-  font-size: 12px;
+  font-size: 18px;
 }
 
 /* css UNLOCKDISCOUNTS name on white banner */
 .footer .white-banner .branding {
   font-family: Notable;
-  font-size: 20px;
+  font-size: 30px;
   padding: 0;
   margin: 0;
   display: flex;
@@ -143,7 +143,7 @@
 
 /* css for white banner > left section > small info about unlock discounts */
 .footer .white-banner .sub-heading {
-  font-size: 14px;
+  font-size: 20px;
   display: flex;
   margin: 0;
 
@@ -168,9 +168,9 @@
 
 /* css for white banner > right section > col ( columns with pages link ) */
 .footer .white-banner .right .col {
-  font-size: 12px;
+  font-size: 14px;
   display: flex;
-  gap: 7px;
+  gap: 20px;
   flex-direction: column;
 }
 
@@ -179,7 +179,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 10px;
 }
 
 /* css for white banner > right section > col > nav > li ( individual page link ) */
@@ -188,8 +188,26 @@
   color: gray;
 }
 
-/* Tablet view*/
-@media screen and (max-width: 860px) {
+/* Responsive view specially or white section of the footer */
+@media screen and (max-width: 960px) {
+  .footer .black-banner .left {
+    font-size: 25px;
+  }
+  .footer .white-banner {
+    padding: 36px 5% 36px 5%;
+    flex-direction: column;
+  }
+
+  .footer .white-banner .right {
+    width: 100%;
+  }
+  .footer .white-banner .sub-heading {
+    font-size: 18px;
+  }
+}
+
+/* Responsive view specially for black section of the footer */
+@media screen and (max-width: 760px) {
   .footer .black-banner {
     flex-direction: column;
   }
@@ -198,19 +216,14 @@
     width: 100%;
   }
 
-  .footer .white-banner {
-    padding: 36px 5% 36px 5%;
-    flex-direction: column;
-  }
-
   .footer .black-banner .left {
     font-size: 25px;
     line-height: 30px;
     padding-right: 0;
   }
 
-  .footer .white-banner .right {
-    width: 100%;
+  .newsletter-break {
+    display: none;
   }
 }
 
@@ -232,9 +245,27 @@
     align-items: center;
   }
 
+  .footer .white-banner .left {
+    margin: 10px;
+  }
+
+  .footer .white-banner .left .summary {
+    font-size: 14px;
+  }
+  .footer .white-banner .left .branding {
+    font-size: 24px;
+  }
+
   .footer .white-banner .right {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+  }
+}
+
+/* specially for the branding at white section */
+@media screen and (max-width: 400px) {
+  .footer .white-banner .left .branding {
+    font-size: 20px;
   }
 }
