--- a/src/components/header.css
+++ b/src/components/header.css
@@ -150,6 +150,15 @@ a {
   margin-top: 5px;
 }
 
+.mobile-sub-link-child {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  font-weight: 400;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
 /* Added css:: for search bar and live suggestion list */
 
 .search-result {
