--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Notable&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Notable&display=swap");
 .footer {
-  background-color: #f8f9fa;
+  background-color: white;
   padding: 20px 0;
   text-align: center;
   color: #495057;
