--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,9 +1,9 @@
 .container {
   width: 80%;
-  max-width: 1200px;
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: white;
 }
 .about-container {
   display: flex;
