css Updates in gadgets carousel

--- a/src/pages/AutoSlideCarousel.css
+++ b/src/pages/AutoSlideCarousel.css
@@ -8,6 +8,8 @@
     font-size: 24px;
     font-family: "YourFontFamily", sans-serif; /* Replace with your desired font family */
     margin-bottom: 30px;
+    margin-top: 40px;
+    letter-spacing: 10px;
   }
   
   .carousel-slide {
@@ -24,12 +26,14 @@
   .carousel-description {
     font-size: 16px;
     margin-top: 10px;
+    font-weight: bold;
   }
   
   .carousel-promo {
     font-size: 14px;
     color: #ff0000;
-    margin-top: 10px;
+    margin-top: 5px;
+    font-weight: bold;
   }
 
   @media (max-width: 1440px) {
@@ -47,6 +51,12 @@
   @media (max-width: 768px) {
     .carousel-image {
         max-height: 160px;
+    }
+
+    .carousel-heading {
+      font-size: 20px;
+      letter-spacing: 1px;
+      line-height: 20px;
     }
   }
   
